k8s.yml
apiVersion: v1
kind: Service
metadata:
  name: prueba-ms
  namespace: vida
  labels:
    app: prueba-ms
spec:
  ports:
    - port: 9090
      targetPort: 9091
  selector:
    app: prueba-ms
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prueba-ms
  namespace: vida
  labels:
    app: prueba-ms
spec:
  selector:
    matchLabels:
      app: prueba-ms
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prueba-ms
    spec:
      securityContext:
        runAsUser: 2000
      containers:
      - image: docker.io/library/prueba-ms:latest
        name: prueba-ms
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /prueba-ms/v1/actuator/health
            port: 9091
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 18
        readinessProbe:
          httpGet:
            path: /prueba-ms/v1/actuator/health
            port: 9091
          initialDelaySeconds: 10
          periodSeconds: 30
        ports:
        - containerPort: 9091
          name: http
        resources:
          limits:
            cpu: 1000m
            memory: 250Mi
          requests:
            cpu: 100m
            memory: 250Mi
      imagePullSecrets:
        - name: regsecret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prueba-ms
  namespace: vida
spec:
  rules:
  - http:
      paths:
      - path: /prueba-ms/v1
        backend:
          service:
            name: prueba-ms
            port:
              number: 9090
        pathType: ImplementationSpecific
